packages/kbn-es-query/src/kuery/grammar/__mocks__/grammar.js
/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0 and the Server Side Public License, v 1; you may not use this file except
 * in compliance with, at your election, the Elastic License 2.0 or the Server
 * Side Public License, v 1.
 */

// Generated by Peggy 0.11.0.
//
// https://github.com/peggyjs/peggy

/* eslint-disable */

function peg$subclass(child, parent) {
  function C() {
    this.constructor = child;
  }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = 'SyntaxError';

  if (typeof Error.captureStackTrace === 'function') {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function (expected, found) {
  const DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"';
    },

    class: function (expectation) {
      const escapedParts = expectation.parts.map(function (part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + '-' + classEscape(part[1])
          : classEscape(part);
      });

      return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
    },

    any: function () {
      return 'any character';
    },

    end: function () {
      return 'end of input';
    },

    other: function (expectation) {
      return expectation.description;
    },
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    const descriptions = expected.map(describeExpectation);
    let i;
    let j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + ' or ' + descriptions[1];

      default:
        return (
          descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
        );
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input';
  }

  return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { expression: peg$parseexpression, argument: peg$parseargument };
  let peg$startRuleFunction = peg$parseexpression;

  const peg$c0 = function (query, trailing) {
    if (trailing.type === 'cursor') {
      return {
        ...trailing,
        suggestionTypes: ['conjunction'],
      };
    }
    if (query !== null) return query;
    return nodeTypes.function.buildNode('is', '*', '*');
  };
  const peg$c1 = function (head, query) {
    return query;
  };
  const peg$c2 = function (head, tail) {
    const nodes = [head, ...tail];
    const cursor = parseCursor && nodes.find((node) => node.type === 'cursor');
    if (cursor) return cursor;
    return buildFunctionNode('or', nodes);
  };
  const peg$c3 = function (head, tail) {
    const nodes = [head, ...tail];
    const cursor = parseCursor && nodes.find((node) => node.type === 'cursor');
    if (cursor) return cursor;
    return buildFunctionNode('and', nodes);
  };
  const peg$c4 = function (query) {
    if (query.type === 'cursor') return query;
    return buildFunctionNode('not', [query]);
  };
  const peg$c5 = '(';
  const peg$c6 = peg$literalExpectation('(', false);
  const peg$c7 = ')';
  const peg$c8 = peg$literalExpectation(')', false);
  const peg$c9 = function (query, trailing) {
    if (trailing.type === 'cursor') {
      return {
        ...trailing,
        suggestionTypes: ['conjunction'],
      };
    }
    return query;
  };
  const peg$c10 = ':';
  const peg$c11 = peg$literalExpectation(':', false);
  const peg$c12 = '{';
  const peg$c13 = peg$literalExpectation('{', false);
  const peg$c14 = '}';
  const peg$c15 = peg$literalExpectation('}', false);
  const peg$c16 = function (field, query, trailing) {
    if (query.type === 'cursor') {
      return {
        ...query,
        nestedPath: query.nestedPath ? `${field.value}.${query.nestedPath}` : field.value,
      };
    }

    if (trailing.type === 'cursor') {
      return {
        ...trailing,
        suggestionTypes: ['conjunction'],
      };
    }
    return buildFunctionNode('nested', [field, query]);
  };
  const peg$c17 = peg$otherExpectation('fieldName');
  const peg$c18 = function (field, operator, value) {
    if (value.type === 'cursor') {
      return {
        ...value,
        suggestionTypes: ['conjunction'],
      };
    }
    const range = buildNamedArgNode(operator, value);
    return buildFunctionNode('range', [field, range]);
  };
  const peg$c19 = function (field, partial) {
    if (partial.type === 'cursor') {
      return {
        ...partial,
        fieldName: field.value,
        suggestionTypes: ['value', 'conjunction'],
      };
    }
    return partial(field);
  };
  const peg$c20 = function (partial) {
    if (partial.type === 'cursor') {
      const fieldName = `${partial.prefix}${partial.suffix}`.trim();
      return {
        ...partial,
        fieldName,
        suggestionTypes: ['field', 'operator', 'conjunction'],
      };
    }
    const field = buildLiteralNode(null);
    return partial(field);
  };
  const peg$c21 = function (partial, trailing) {
    if (trailing.type === 'cursor') {
      return {
        ...trailing,
        suggestionTypes: ['conjunction'],
      };
    }
    return partial;
  };
  const peg$c22 = function (head, partial) {
    return partial;
  };
  const peg$c23 = function (head, tail) {
    const nodes = [head, ...tail];
    const cursor = parseCursor && nodes.find((node) => node.type === 'cursor');
    if (cursor) {
      return {
        ...cursor,
        suggestionTypes: ['value'],
      };
    }
    return (field) =>
      buildFunctionNode(
        'or',
        nodes.map((partial) => partial(field))
      );
  };
  const peg$c24 = function (head, tail) {
    const nodes = [head, ...tail];
    const cursor = parseCursor && nodes.find((node) => node.type === 'cursor');
    if (cursor) {
      return {
        ...cursor,
        suggestionTypes: ['value'],
      };
    }
    return (field) =>
      buildFunctionNode(
        'and',
        nodes.map((partial) => partial(field))
      );
  };
  const peg$c25 = function (partial) {
    if (partial.type === 'cursor') {
      return {
        ...list,
        suggestionTypes: ['value'],
      };
    }
    return (field) => buildFunctionNode('not', [partial(field)]);
  };
  const peg$c26 = peg$otherExpectation('value');
  const peg$c27 = function (value) {
    if (value.type === 'cursor') return value;
    const isPhrase = buildLiteralNode(true);
    return (field) => buildFunctionNode('is', [field, value, isPhrase]);
  };
  const peg$c28 = function (value) {
    if (value.type === 'cursor') return value;

    if (
      !allowLeadingWildcards &&
      value.type === 'wildcard' &&
      nodeTypes.wildcard.hasLeadingWildcard(value)
    ) {
      error(
        'Leading wildcards are disabled. See query:allowLeadingWildcards in Advanced Settings.'
      );
    }

    const isPhrase = buildLiteralNode(false);
    return (field) => buildFunctionNode('is', [field, value, isPhrase]);
  };
  const peg$c29 = peg$otherExpectation('OR');
  const peg$c30 = 'or';
  const peg$c31 = peg$literalExpectation('or', true);
  const peg$c32 = peg$otherExpectation('AND');
  const peg$c33 = 'and';
  const peg$c34 = peg$literalExpectation('and', true);
  const peg$c35 = peg$otherExpectation('NOT');
  const peg$c36 = 'not';
  const peg$c37 = peg$literalExpectation('not', true);
  const peg$c38 = peg$otherExpectation('literal');
  const peg$c39 = function () {
    return parseCursor;
  };
  const peg$c40 = '"';
  const peg$c41 = peg$literalExpectation('"', false);
  const peg$c42 = function (prefix, cursor, suffix) {
    const { start, end } = location();
    return {
      type: 'cursor',
      start: start.offset,
      end: end.offset - cursor.length,
      prefix: prefix.join(''),
      suffix: suffix.join(''),
      text: text().replace(cursor, ''),
    };
  };
  const peg$c43 = function (chars) {
    return buildLiteralNode(chars.join(''));
  };
  const peg$c44 = '\\';
  const peg$c45 = peg$literalExpectation('\\', false);
  const peg$c46 = /^[\\"]/;
  const peg$c47 = peg$classExpectation(['\\', '"'], false, false);
  const peg$c48 = function (char) {
    return char;
  };
  const peg$c49 = /^[^"]/;
  const peg$c50 = peg$classExpectation(['"'], true, false);
  const peg$c51 = function (chars) {
    const sequence = chars.join('').trim();
    if (sequence === 'null') return buildLiteralNode(null);
    if (sequence === 'true') return buildLiteralNode(true);
    if (sequence === 'false') return buildLiteralNode(false);
    if (chars.includes(wildcardSymbol)) return buildWildcardNode(sequence);
    return buildLiteralNode(sequence);
  };
  const peg$c52 = peg$anyExpectation();
  const peg$c53 = '*';
  const peg$c54 = peg$literalExpectation('*', false);
  const peg$c55 = function () {
    return wildcardSymbol;
  };
  const peg$c56 = '\\t';
  const peg$c57 = peg$literalExpectation('\\t', false);
  const peg$c58 = function () {
    return '\t';
  };
  const peg$c59 = '\\r';
  const peg$c60 = peg$literalExpectation('\\r', false);
  const peg$c61 = function () {
    return '\r';
  };
  const peg$c62 = '\\n';
  const peg$c63 = peg$literalExpectation('\\n', false);
  const peg$c64 = function () {
    return '\n';
  };
  const peg$c65 = function (keyword) {
    return keyword;
  };
  const peg$c66 = /^[\\():<>"*{}]/;
  const peg$c67 = peg$classExpectation(
    ['\\', '(', ')', ':', '<', '>', '"', '*', '{', '}'],
    false,
    false
  );
  const peg$c68 = function (sequence) {
    return sequence;
  };
  const peg$c69 = 'u';
  const peg$c70 = peg$literalExpectation('u', false);
  const peg$c71 = function (digits) {
    return String.fromCharCode(parseInt(digits, 16));
  };
  const peg$c72 = /^[0-9a-f]/i;
  const peg$c73 = peg$classExpectation(
    [
      ['0', '9'],
      ['a', 'f'],
    ],
    false,
    true
  );
  const peg$c74 = '<=';
  const peg$c75 = peg$literalExpectation('<=', false);
  const peg$c76 = function () {
    return 'lte';
  };
  const peg$c77 = '>=';
  const peg$c78 = peg$literalExpectation('>=', false);
  const peg$c79 = function () {
    return 'gte';
  };
  const peg$c80 = '<';
  const peg$c81 = peg$literalExpectation('<', false);
  const peg$c82 = function () {
    return 'lt';
  };
  const peg$c83 = '>';
  const peg$c84 = peg$literalExpectation('>', false);
  const peg$c85 = function () {
    return 'gt';
  };
  const peg$c86 = peg$otherExpectation('whitespace');
  const peg$c87 = /^[ \t\r\n\xA0]/;
  const peg$c88 = peg$classExpectation([' ', '\t', '\r', '\n', '\xA0'], false, false);
  const peg$c89 = '@kuery-cursor@';
  const peg$c90 = peg$literalExpectation('@kuery-cursor@', false);
  const peg$c91 = function () {
    return cursorSymbol;
  };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected = [];
  let peg$silentFails = 0;

  let peg$result;

  if ('startRule' in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: 'any' };
  }

  function peg$endExpectation() {
    return { type: 'end' };
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0;
    let s1;
    let s2;
    let s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSpace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseSpace();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseOrQuery();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseOptionalSpace();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOrQuery() {
    let s0;
    let s1;
    let s2;
    let s3;
    let s4;
    let s5;

    s0 = peg$currPos;
    s1 = peg$parseAndQuery();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseOr();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseAndQuery();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseOr();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseAndQuery();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseAndQuery();
    }

    return s0;
  }

  function peg$parseAndQuery() {
    let s0;
    let s1;
    let s2;
    let s3;
    let s4;
    let s5;

    s0 = peg$currPos;
    s1 = peg$parseNotQuery();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseAnd();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseNotQuery();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseAnd();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseNotQuery();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNotQuery();
    }

    return s0;
  }

  function peg$parseNotQuery() {
    let s0;
    let s1;
    let s2;

    s0 = peg$currPos;
    s1 = peg$parseNot();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSubQuery();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseSubQuery();
    }

    return s0;
  }

  function peg$parseSubQuery() {
    let s0;
    let s1;
    let s2;
    let s3;
    let s4;
    let s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$c6);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpace();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseOrQuery();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseOptionalSpace();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c7;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c8);
              }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNestedQuery();
    }

    return s0;
  }

  function peg$parseNestedQuery() {
    let s0;
    let s1;
    let s2;
    let s3;
    let s4;
    let s5;
    let s6;
    let s7;
    let s8;
    let s9;
